--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   (function(){
     const loader = new THREE.TextureLoader();
     // loader.setPath( 'http://192.168.101.101:9005/mr.ke.com/demo1/' );
-    loader.setPath( '../images/' );
+    loader.setPath( './images/' );
 
     for (var x = 0; x < 8; x++) {
       for (var y = 0; y < 4; y++) {
