--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 
 </body>
-<script src="../js/jquery-3.4.1.min.js"></script>
-<script src="../js/three.js"></script>
-<script src="../js/OrbitControls.js"></script>
-<script src="../js/stats.min.js"></script>
+<script src="./js/jquery-3.4.1.min.js"></script>
+<script src="./js/three.js"></script>
+<script src="./js/OrbitControls.js"></script>
+<script src="./js/stats.min.js"></script>
 <script>
   let scene, camera, renderer
   (function() {
@@ -102,7 +102,6 @@
 
   (function(){
     const loader = new THREE.TextureLoader();
-    // loader.setPath( 'http://192.168.101.101:9005/mr.ke.com/demo1/' );
     loader.setPath( './images/' );
 
     for (var x = 0; x < 8; x++) {
